# mini_pupper_ros.banban

./: README.md  pc_install.sh  pupper_install.sh
mini_pupper_bringup/launch/: bringup.launch.py  champ_controllers.launch.py  ekf_localization.launch.py  hardware_interface.launch.py  rviz.launch.py
mini_pupper_description/config/ros_control/: mini_pupper_2_controller.yaml
mini_pupper_description/launch/: mini_pupper_description.launch.py
mini_pupper_simulation/: CMakeLists.txt  package.xml
mini_pupper_simulation/launch/: gazebo.launch.py  main.launch.py  ros2_controllers.launch.py
