<?xml version="1.0"?>
<package format="3">
  <name>mini_pupper_simulation</name>
  <version>1.0.0</version>
  <description>Mini Pupper Simulation Package</description>

  <maintainer email="fae@mangdang.net">MangDang</maintainer>
  <author email="thefoxfoxfox@outlook.com">Han</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>

  <depend>rclcpp</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>

  <exec_depend>rviz2</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
